--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 if (utmXXX === "__PLACEMENT__") {
     console.log("test1")
                     } else if (isMobileDevice) {
-                        window.location.href = "https://belleboutiquefrench.myshopify.com/products/conjunto-de-punto-nube";
+                        window.location.href = "https://belleboutiquefrench.myshopify.com/products/jeans";
                     } else {
                     }
             </script>
