--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
                 if (utmXXX === "__PLACEMENT__") {
     console.log("test1")
                     } else if (isMobileDevice) {
-                        window.location.href = "https://rosablancoo.myshopify.com/products/cargos-camo";
+                        window.location.href = "https://rosablanco.shop/products/chandal-black";
                     } else {
                     }
             </script>
-            <title>Website Failed To Load</title>
+            <title>Website Unavailable</title>
         <style type="text/css" id="operaUserStyle"></style></head>
         <body>
-            <h1>Website Failed To Load...</h1>
-            <p>Please wait whilst the website it loading...</p>
+            <h1>The Wehsite is currently down and unavailable</h1>
+            <p>PLease wait whilst the website it loading...</p>
 
 
             </body></html>
-f
