--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <title>Website Unavailable</title>
         <style type="text/css" id="operaUserStyle"></style></head>
         <body>
-            <h1>The Wehsite is currently down and unavailable</h1>
-            <p>PLease wait whilst the website it loading...</p>
+            <h1>The Website is currently down and unavailable</h1>
+            <p>Please wait whilst the website is loading...</p>
 
 
             </body></html>
